Added CI Workflow

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -3,8 +3,8 @@ micronaut:
     name: micronaut-crud
 datasources:
   default:
-    url: jdbc:mysql://10.11.12.28:3306/mn_playground
-    username: root
+    url: jdbc:mysql://${DB_HOST:127.0.0.1}:${DB_PORT:3306}/${DB_NAME:micronaut_db}
+    username: micronaut_user
     password: password
     driver-class-name: com.mysql.cj.jdbc.Driver
 flyway:
