--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,10 +38,17 @@ jobs:
       - name: Use Gradle
         uses: gradle/actions/setup-gradle@v3
 
-      - name: Verify MySQL connection
+      - name: Wait for MySQL to be ready
         run: |
-          sudo apt-get install -y mysql-client
-          mysql -h 127.0.0.1 -u micronaut_user -ppassword -e "SHOW DATABASES;"
+          echo "Waiting for MySQL to start..."
+          for i in {1..10}; do
+            if mysqladmin ping -h 127.0.0.1 --silent; then
+              echo "MySQL is ready!"
+              break
+            fi
+            echo "Waiting for MySQL..."
+            sleep 3
+          done
 
       - name: Create `books` Table in MySQL
         run: |
