--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -4,10 +4,11 @@ micronaut:
 datasources:
   default:
     url: jdbc:mysql://${DB_HOST:127.0.0.1}:${DB_PORT:3306}/${DB_NAME:micronaut_db}
-    username: micronaut_user
-    password: password
+    username: ${DB_USER:micronaut_user}
+    password: ${DB_PASSWORD:password}
     driver-class-name: com.mysql.cj.jdbc.Driver
 flyway:
   datasources:
     default:
       enabled: true
+      create-schemas: true
