--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -62,7 +62,7 @@ jobs:
       - name: Ensure MySQL User Has Correct Permissions
         run: |
           mysql -h 127.0.0.1 -u root -proot -e "
-          GRANT ALL PRIVILEGES ON micronaut_db.* TO 'micronaut_user'@'%' IDENTIFIED BY 'password';
+          GRANT ALL PRIVILEGES ON micronaut_db.* TO 'micronaut_user'@'%';
           FLUSH PRIVILEGES;"
     
 
