--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -4,7 +4,7 @@ micronaut:
 datasources:
   default:
     url: jdbc:mysql://${DB_HOST:127.0.0.1}:${DB_PORT:3306}/${DB_NAME:micronaut_db}
-    username: ${DB_USER:micronaut_user}
+    username: ${DB_USER:root}
     password: ${DB_PASSWORD:password}
     driver-class-name: com.mysql.cj.jdbc.Driver
 flyway:
@@ -13,5 +13,5 @@ flyway:
       enabled: true
       create-schemas: true
       url: jdbc:mysql://${DB_HOST:127.0.0.1}:${DB_PORT:3306}/${DB_NAME:micronaut_db}
-      user: ${DB_USER:micronaut_user}
+      user: ${DB_USER:root}
       password: ${DB_PASSWORD:password}
