--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,14 +14,14 @@ jobs:
       mysql:
         image: mysql:8.0
         env:
-          MYSQL_ROOT_PASSWORD: root
+          MYSQL_ROOT_PASSWORD: password
           MYSQL_DATABASE: micronaut_db
           MYSQL_USER: micronaut_user
           MYSQL_PASSWORD: password
         ports:
           - 3306:3306
         options: >-
-          --health-cmd="mysqladmin ping -h 127.0.0.1 --password=root"
+          --health-cmd="mysqladmin ping -h 127.0.0.1 --password=password"
           --health-interval=10s
           --health-timeout=5s
           --health-retries=3
