--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -67,7 +67,7 @@ jobs:
 
       - name: Build and Apply Flyway Migrations
         run: |
-          ./gradlew flywayMigrate --stacktrace
+          ./gradlew flywayMigrate --info
 
       - name: Build and Test Application
         env:
