--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -67,10 +67,10 @@ jobs:
 
       - name: Build and Apply Flyway Migrations
         run: |
-          export DATASOURCES_DEFAULT_URL=jdbc:mysql://localhost:3306/db
-          export DATASOURCES_DEFAULT_USERNAME=sherlock
-          export DATASOURCES_DEFAULT_PASSWORD=elementary
-          ./gradlew flywayMigrate --info
+          ./gradlew flywayMigrate \
+          -Dflyway.url=jdbc:mysql://localhost:3306/mydatabase \
+          -Dflyway.user=myuser \
+          -Dflyway.password=mypassword
 
       - name: Build and Test Application
         env:
