--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,8 @@ dependencies {
 
     // yaml instead of properties
     runtimeOnly("org.yaml:snakeyaml")
+
+    runtimeOnly("com.h2database:h2")
 }
 
 
