--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,8 +16,6 @@ jobs:
         env:
           MYSQL_ROOT_PASSWORD: password
           MYSQL_DATABASE: micronaut_db
-          MYSQL_USER: micronaut_user
-          MYSQL_PASSWORD: password
         ports:
           - 3306:3306
         options: >-
@@ -55,28 +53,23 @@ jobs:
           sudo apt-get install -y mysql-client
           mysql --protocol=tcp -h 127.0.0.1 -u root -ppassword -e "SHOW DATABASES;"
 
-      - name: Verify MySQL Connection Before Flyway
-        run: |
-          mysql -h 127.0.0.1 -u root -ppassword -e "USE micronaut_db;"
+#      - name: Verify MySQL Connection Before Flyway
+#        run: |
+#          mysql -h 127.0.0.1 -u root -ppassword -e "USE micronaut_db;"
+#
+#      - name: Ensure MySQL User Has Correct Permissions
+#        run: |
+#          mysql -h 127.0.0.1 -u root -ppassword -e "
+#          GRANT ALL PRIVILEGES ON micronaut_db.* TO 'micronaut_user'@'%';
+#          FLUSH PRIVILEGES;"
 
-      - name: Ensure MySQL User Has Correct Permissions
-        run: |
-          mysql -h 127.0.0.1 -u root -ppassword -e "
-          GRANT ALL PRIVILEGES ON micronaut_db.* TO 'micronaut_user'@'%';
-          FLUSH PRIVILEGES;"
-
-      - name: Build and Apply Flyway Migrations
-        run: |
-          ./gradlew flywayMigrate --debug \
-          -Dflyway.url=jdbc:mysql://localhost:3306/micronaut_db \
-          -Dflyway.user=root \
-          -Dflyway.password=password
+#      - name: Build and Apply Flyway Migrations
+#        run: |
+#          ./gradlew flywayMigrate --debug \
+#          -Dflyway.url=jdbc:mysql://localhost:3306/micronaut_db \
+#          -Dflyway.user=root \
+#          -Dflyway.password=password
 
       - name: Build and Test Application
-        env:
-          DB_HOST: 127.0.0.1
-          DB_USER: root
-          DB_PASSWORD: password
         run: |
           ./gradlew clean build --stacktrace
-          ./gradlew test
