--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,6 @@ plugins {
     id("io.micronaut.application") version "4.4.2"
     id("io.micronaut.test-resources") version "4.4.2"
     id("io.micronaut.aot") version "4.4.2"
-    id "org.flywaydb.flyway" version "9.22.3"
 }
 
 version = "0.1"
@@ -21,7 +20,7 @@ dependencies {
     //jdbc
     implementation("io.micronaut.data:micronaut-data-jdbc")
     implementation("io.micronaut.sql:micronaut-jdbc-hikari")
-    implementation("mysql:mysql-connector-java")
+    runtimeOnly("mysql:mysql-connector-java")
 
     // flyway
     implementation("io.micronaut.flyway:micronaut-flyway")
@@ -33,8 +32,6 @@ dependencies {
 
     // yaml instead of properties
     runtimeOnly("org.yaml:snakeyaml")
-
-    runtimeOnly("com.h2database:h2")
 }
 
 
@@ -74,6 +71,5 @@ micronaut {
 tasks.named("dockerfileNative") {
     jdkVersion = "21"
 }
-
 
 
