Updated application.yaml and delete application.properties

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -3,10 +3,11 @@ micronaut:
     name: micronaut-crud
 datasources:
   default:
+    dialect: MYSQL
     url: jdbc:mysql://127.0.0.1:3306/micronaut_db
     username: root
     password: password
-
+    driver-class-name: com.mysql.cj.jdbc.Driver
 flyway:
   datasources:
     default:
