--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -80,9 +80,9 @@ jobs:
           "SELECT COUNT(*) FROM information_schema.tables WHERE table_schema='micronaut_db' AND table_name='books';")
         
           if [ "$TABLE_EXISTS" -eq "1" ]; then
-          echo "✅ Table 'books' exists."
+          echo "Table 'books' exists."
           else
-          echo "❌ Table 'books' does NOT exist."
+          echo "Table 'books' does NOT exist."
           exit 1
           fi
 
