--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -69,3 +69,8 @@ jobs:
           exit 1
           fi
 
+      - name: Upload Build Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: micronaut-crud-jar
+          path: build/libs/*.jar
