--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -74,3 +74,8 @@ jobs:
         with:
           name: micronaut-crud-jar
           path: build/libs/*.jar
+
+      - name: Publish to GitHub Packages
+        run: ./gradlew publish
+        env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
