--- a/build.gradle
+++ b/build.gradle
@@ -7,10 +7,29 @@ plugins {
 }
 
 version = "0.1"
-group = "com.piyal"
+group = "com.github.TiansiGu"
 
 repositories {
     mavenCentral()
+}
+
+publishing {
+    publications {
+        mavenJava(MavenPublication) {  // Defines the package to publish
+            from components.java
+            artifactId = "micronaut-crud"
+        }
+    }
+    repositories {
+        maven {
+            name = "GitHubPackages"
+            url = uri("https://maven.pkg.github.com/TiansiGu/CS686-Assignment6")
+            credentials {
+                username = project.findProperty("gpr.user") ?: System.getenv("GITHUB_ACTOR")
+                password = project.findProperty("gpr.token") ?: System.getenv("GITHUB_TOKEN")
+            }
+        }
+    }
 }
 
 dependencies {
